# ORGTerm

./: Audio.h  CMakeLists.txt  Organya.cpp  Organya.h  PixTone.cpp  README.md  Sound.cpp  Sound.h  WindowsWrapper.h  installorgs.sh  main.cpp  miniaudio.cpp
